Modified the plugin to bit different user experience. -Removed the separate concept of program link with watch link. -Added support for program info with program details -Added thumbnails -Added full title for the player
Added threaded mechanism for thumbnail loading
Code style cleanups
First version of search

--- a/plugin.video.elisa.viihde/resources/language/Finnish/strings.xml
+++ b/plugin.video.elisa.viihde/resources/language/Finnish/strings.xml
@@ -16,4 +16,5 @@
   <string id="30014">Eilen</string>
   <string id="30015">Katso</string>
   <string id="30016">Kesto</string>
+  <string id="30017">Etsi..</string>
 </strings>
