--- a/plugin.video.elisa.viihde/changelog.txt
+++ b/plugin.video.elisa.viihde/changelog.txt
@@ -1,9 +1,14 @@
-[B]0.0.4[/B]
-- Keksit palautettu ja polku muutettu
-- Tallenteen kuvaus/plot -teksti rivitetty nopeaa silmäystä varten
+[B]0.0.5.dev[/B]
+- Ohjelma linkki on suora soita linkki ja info siirretty infon (i-näppäin) taakse
+- Koko title playeriin 
+- Poistettu thumbnail ja ohjelmatietojen lataus (takaisin nopeampi toteutus)
+- Lisätty etsintä toiminto
 
-[B]0.0.3[/B]
-- Keksit kommentoitu pois special:// -polun takia, jotta toimii
+[B]0.0.4[/B]
+- Ohjelma linkki on suora soita linkki ja info siirretty infon (i-näppäin) taakse
+- Koko title playeriin 
+- Lataa thumbnailit ja ohjelmatiedot, joka saattaa tehdä pitkistä hakemistosta 
+hitaanpuoleisia.. (Ehkä eri threadiin ohjelma tietojen ja thumbnailien lataus)
 
 [B]0.0.2[/B]
 - Kansion latausta nopeutettu (josta johtuen muutoksia käyttöliittymän logiikkaan)
