--- a/plugin.video.elisa.viihde/resources/language/English/strings.xml
+++ b/plugin.video.elisa.viihde/resources/language/English/strings.xml
@@ -16,4 +16,5 @@
   <string id="30014">Yesterday</string>  
   <string id="30015">Watch</string>
   <string id="30016">Length</string>
+  <string id="30017">Search..</string>
 </strings>
