--- a/changelog.txt
+++ b/changelog.txt
@@ -1,19 +1,16 @@
-[B]0.0.5.dev[/B]
-- Ohjelma linkki on suora soita linkki ja info siirretty infon (i-näppäin) taakse
-- Koko title playeriin 
-- Poistettu thumbnail ja ohjelmatietojen lataus (takaisin nopeampi toteutus)
-- Lisätty etsintä toiminto
+[B]0.0.5[/B]
+- Removed the download of the thumbnails and program info (it's now faster again)
+- Added search functionality
 
 [B]0.0.4[/B]
-- Ohjelma linkki on suora soita linkki ja info siirretty infon (i-näppäin) taakse
-- Koko title playeriin 
-- Lataa thumbnailit ja ohjelmatiedot, joka saattaa tehdä pitkistä hakemistosta 
-hitaanpuoleisia.. (Ehkä eri threadiin ohjelma tietojen ja thumbnailien lataus)
+- Name of the recording is now direct play link. Recording info is now available from info (I key)
+- Whole program title is now showed
+- Download thumbnails and program infos, which might affect the performance
 
 [B]0.0.2[/B]
-- Kansion latausta nopeutettu (josta johtuen muutoksia käyttöliittymän logiikkaan)
-- *-merkki ohjelman nimen edessä, jos sitä ei olla vielä katsottu
-- "eilen" ja "tänään" päivämäärän sijaan ohjelman nimessä
+- Loading of the directory is now faster (some changes to UI logic)
+- Unwatched recordings are now marked with *
+- "yesterday" and "today" are showed in recording name instead of date
 
 [B]0.0.1[/B]
 - Initial version
