--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+[B]0.0.6[/B]
+- Fixed date format and plugin crash bugs. (OttoK)
+- Plugin now compatible with latest OpenElec 3.0.0 and should work better for all other XBMC users too. (OttoK)
+
 [B]0.0.5[/B]
 - Removed the download of the thumbnails and program info (it's now faster again)
 - Added search functionality
